--- a/qr-code-component-main/qr-code-app/src/App.css
+++ b/qr-code-component-main/qr-code-app/src/App.css
@@ -22,7 +22,7 @@
   display: flex;
   flex-direction: column;
   border-radius: 20px;
-  /* box-shadow: 20px 20px 20px gray; */
+  box-shadow: 20px 20px 20px gray;
 }
 
 .image-container{
